# F1Scrap

./: .gitignore  README.md  pyproject.toml
f1_scrap/: main.py  run.sh
f1_scrap/circuits/: circuit.py  circuits_types.py
f1_scrap/drivers/: drivers.py  drivrer_types.py
f1_scrap/results/: results.py  results_types.py
f1_scrap/teams/: teams.py  teams_types.py
