[tool.poetry]
name = "f1-scrap"
version = "0.1.0"
description = ""
authors = ["Kamil Democko <kamil.democko@gmail.com>"]
readme = "README.md"
packages = [{include = "f1_scrap"}]

[tool.poetry.dependencies]
python = "^3.10"
playwright = "^1.41.2"
msgspec = "^0.18.6"
arrow = "^1.3.0"
pyyaml = "^6.0.1"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
